<resources>
    <string name="app_name">Countries</string>
    <string name="countries_app">Countries</string>
    <string name="error_general">Error</string>
    <string name="error_action_retry">Retry</string>
    <string name="country_details">Details</string>
    <string name="country_capital">Capital</string>
    <string name="label_region">Region</string>
    <string name="label_area">Area</string>
    <string name="label_population">Population</string>
    <string name="label_subregion">Subregion</string>
</resources>
