<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:elevation="4dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/image_flag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/AppTheme.Toolbar"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrolling_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--Capital-->
            <TextView
                android:id="@+id/label_capital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/country_capital"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold"
                android:textColor="@color/color_text_black"/>

            <TextView
                android:id="@+id/country_capital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-light"
                android:lineSpacingMultiplier="1.2"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/color_text_black"/>

            <!--Region-->
            <TextView
                android:id="@+id/label_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/label_region"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold"
                android:textColor="@color/color_text_black"/>

            <TextView
                android:id="@+id/country_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-light"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/color_text_black"/>

            <!--Subregion-->
            <TextView
                android:id="@+id/label_subregion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/label_subregion"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold"
                android:textColor="@color/color_text_black"/>

            <TextView
                android:id="@+id/country_subregion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-light"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/color_text_black"/>

            <!--Population-->
            <TextView
                android:id="@+id/label_population"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/label_population"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold"
                android:textColor="@color/color_text_black"/>

            <TextView
                android:id="@+id/country_population"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-light"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/color_text_black"/>

            <!--Area-->
            <TextView
                android:id="@+id/label_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/label_area"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold"
                android:textColor="@color/color_text_black"/>

            <TextView
                android:id="@+id/country_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="32dp"
                android:fontFamily="sans-serif-light"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/color_text_black"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>